# rayforce

./: .clang-tidy  .gitignore  .tsan-suppressions  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  bench-agg-v2  bench-idx-route  bench-join-buildside  codex_prompt.txt  cov_final.profdata  cov_master_now.profdata  cov_ours_now.profdata  cov_timer_after.profdata  cov_timer_final.profdata  cov_wave10.profdata  cov_wave11.profdata  cov_wave7.profdata  cov_wave8.profdata  cov_wave9.profdata  cov_with_new_tests.profdata  dead_code_report_current.md  mkdocs.yml  performance_analysis.md  rayforce.def  rayforce.syms
.github/: PULL_REQUEST_TEMPLATE.md  release-notes.sh
app/: main.c  repl.c  term.c
audit/: AUDIT.md  LEDGER.md  XCHECK.md
bench/: bench_csv.c  bench_csv_detail.c  bench_csv_profile.c  bench_csv_table.sh  bench_queries.c  bench_rayforce.c  csv_bigints_gen.rfl  csv_bigints_read_r2.rfl  csv_numeric_gen.rfl  csv_numeric_read_r1.rfl  csv_numeric_read_r2.rfl  csv_table_gen.rfl  csv_table_read_r1.rfl  csv_table_read_r2.rfl  main.c
core/: aggr.c  binary.c  cmp.c  compose.c  ctx.c  ctx.h  dynlib.c  env.c  error.c  eval.c  format.c  fs.c  hash.c  heap.c  heap.h  index.c  index.h  io.c  iocp.c  ipc.c  items.c  join.c  kqueue.c  log.c  logic.c  math.c  nfo.c  ops.c  ops.h  order.c  os.c  parse.c  pivot.c  pivot.h  poll.h  pool.c  rayforce.c  rayforce.h  runtime.c  serde.c  (+13 more)
docs/: _headers  about.md  architecture-offloading.html  c-api-core.html  data-types-collections.html  data-types.html  graph-storage.html  guide-datalog.html  guide-ipc.html  index.md  ipc.html  llms.txt  mkdocs.yml  promo.html  queries-joins.html  quick-start.html  rayfall-functions.html  repl.html  robots.txt  tutorial-analytics.html  tutorial-datalog.html  tutorial-graph.html  tutorial-storage.html  vector-search.html
examples/: analytics.c  graph_traversal.c  join_tables.c  window_functions.c
fuzz/: README.md  common.h  fuzz_csv.c  fuzz_de.c  fuzz_eval.c  fuzz_journal.c  fuzz_numparse.c  fuzz_parse.c
include/: rayforce.h
overrides/: about.html  home.html  main.html
packaging/: homebrew-formula.rb.tmpl  nfpm.yaml
scripts/: fuzz-seed-frames.sh  fuzz-seed-parse.sh  soak.sh
test/: main.c  stress_eval.c  stress_eval.h  stress_store.c  stress_store.h  test.h  test_agg_engine.c  test_agg_registry.c  test_aof.c  test_arena.c  test_atom.c  test_audit.c  test_block.c  test_buddy.c  test_compile.c  test_cow.c  (+62 more)
(+895 files in other folders)
